# flutter_rnnoise

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  rnnoise_processor.cpp  rnnoise_processor.h
android/app/src/main/kotlin/com/lintasedu/rnnoise/flutter_rnnoise/: MainActivity.kt  RnnoisePlugin.kt
android/app/src/main/res/xml/: network_security_config.xml
lib/: main.dart  vc.dart
test/: widget_test.dart
